few production bugs fixed

--- a/index.html
+++ b/index.html
@@ -80,27 +80,7 @@
               </div>
             </div>
 
-            <div class="members">
-              <!-- <div class="people">
-                           <div class="wrap">
-                            <div class="pic">
-                                <img src="./assets/user.jpg" alt="people">
-                            </div>
-                            <div class="name">
-                                <h3>Gerald Dean</h3>
-                                <div class="time">
-                                   
-                                    <span>6:50 pm</span>
-                                </div>
-                            </div>
-                           </div>
-                            <div class="dots">
-                                <div class="thrice"></div>
-                                <div class="single"></div>
-                                <span>10/2/2022 6:50 pm</span>
-                            </div>
-                        </div> -->
-            </div>
+            <div class="members"></div>
           </div>
 
           <div class="chatBox">
@@ -125,26 +105,7 @@
               </div>
             </div>
 
-            <div class="chats">
-              <!-- <div class="rec_wrapper">
-                            <div class="person">
-                                <img src="./assets/user.jpg" alt="user_img">
-                            </div>
-                            <div class="rec_msg">
-                                <p>lorem ipsum dolor sit amet patipet worduna pilow jysudh sjdhjh aksbx asxnkaj jasb asbd </p>
-                            </div>
-                        </div>
-
-                        <div class="sent_wrapper">
-                            <div class="sent_msg">
-                                <p>lorem ipsum dolor sit amet patipet worduna pilow jysudh sjdhjh aksbx asxn
-                                    rem ipsum dolor sit amet patipet worduna pilow jysudh sjdhjh aksbx asxnkaj jasb asbd </p>
-                            </div>
-                            <div class="person">
-                                <img src="./assets/user.jpg" alt="user_img">
-                            </div>
-                        </div> -->
-            </div>
+            <div class="chats"></div>
 
             <div class="send">
               <div class="plus"><i class="fas fa-solid fa-plus"></i></div>
@@ -167,22 +128,17 @@
             <div class="profileImg">
               <i class="fas fa-solid fa-arrow-left" id="close2"></i>
               <img src="./assets/user.jpg" alt="ProfileImg" />
-              <!-- <h1>Aris Christofi</h1>
-              <p>Admin</p> -->
             </div>
             <div class="personalInfo">
               <h3>Personal Information</h3>
               <div class="userDetails">
                 <img src="./assets/post.svg" alt="post-icon" />
-                <!-- <p>Support@whelp.net</p> -->
               </div>
               <div class="userDetails">
                 <img src="./assets/call-gry.svg" alt="" />
-                <!-- <p>+1 (786) 903 - 7331</p> -->
               </div>
               <div class="userDetails">
                 <img src="./assets/clock.svg" alt="" />
-                <!-- <p>Mon - Fri : 9am - 6pm</p> -->
               </div>
             </div>
             <div class="addTag">
@@ -206,7 +162,7 @@
     </main>
 
     <script src="./js/listeners.js"></script>
-    <script src="http://localhost:8080/socket.io/socket.io.js"></script>
+    <script src="https://whelp-backend.herokuapp.com/socket.io/socket.io.js"></script>
     <script src="./js/client.js"></script>
   </body>
 </html>
