--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="emoji">
                   <img src="./assets/smile.svg" alt="smile-icon" />
                 </div>
-                <div class="plane"><img src="./assets/send.svg" alt="" /></div>
+                <button class="plane"><img src="./assets/send.svg" alt="" /></button>
               </div>
             </div>
           </div>
