Fixed Profile section

--- a/index.html
+++ b/index.html
@@ -128,17 +128,22 @@
             <div class="profileImg">
               <i class="fas fa-solid fa-arrow-left" id="close2"></i>
               <img src="./assets/user.jpg" alt="ProfileImg" />
+              <h1></h1>
+              <p></p>
             </div>
             <div class="personalInfo">
               <h3>Personal Information</h3>
               <div class="userDetails">
                 <img src="./assets/post.svg" alt="post-icon" />
+                <p></p>
               </div>
               <div class="userDetails">
-                <img src="./assets/call-gry.svg" alt="" />
+                <img src="./assets/call-gry.svg" alt="call-icon" />
+                <p></p>
               </div>
               <div class="userDetails">
-                <img src="./assets/clock.svg" alt="" />
+                <img src="./assets/clock.svg" alt="clock-icon" />
+                <p></p>
               </div>
             </div>
             <div class="addTag">
