--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </main>
 
     <script src="./js/listeners.js"></script>
-    <script src="https://whelp-backend.herokuapp.com/socket.io/socket.io.js"></script>
+    <script src="https://whelp-backend.vercel.app/socket.io/socket.io.js"></script>
     <script src="./js/client.js"></script>
   </body>
 </html>
